--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,331 +1,331 @@
 "Skins"
 {
-	"狻猊"
+	"狻猊（新）"
 	{
 		"index"		"1103"
 		"classes"	"weapon_xm1014;"
 	}
-	"黑莲花"
+	"黑莲花（新）"
 	{
 		"index"		"1102"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"速度激情"
+	"速度激情（新）"
 	{
 		"index"		"1101"
 		"classes"	"weapon_ssg08;"
 	}
-	"零食派对"
+	"零食派对（新）"
 	{
 		"index"		"1100"
 		"classes"	"weapon_glock;"
 	}
-	"战术手电"
+	"战术手电（新）"
 	{
 		"index"		"1099"
 		"classes"	"weapon_bizon;"
 	}
-	"玩具盒子"
+	"玩具盒子（新）"
 	{
 		"index"		"1098"
 		"classes"	"weapon_mac10;"
 	}
-	"彼岸花"
+	"彼岸花（新）"
 	{
 		"index"		"1097"
 		"classes"	"weapon_m4a1;"
 	}
-	"游击队"
+	"游击队（新）"
 	{
 		"index"		"1096"
 		"classes"	"weapon_mp7;"
 	}
-	"特训地图"
+	"特训地图（新）"
 	{
 		"index"		"1095"
 		"classes"	"weapon_g3sg1;"
 	}
-	"富士山"
+	"富士山（新）"
 	{
 		"index"		"1094"
 		"classes"	"weapon_mp9;"
 	}
-	"同步力场"
+	"同步力场（新）"
 	{
 		"index"		"1093"
 		"classes"	"weapon_fiveseven;"
 	}
-	"ZX81彩色"
+	"ZX81彩色（新）"
 	{
 		"index"		"1092"
 		"classes"	"weapon_famas;"
 	}
-	"胶面花纹"
+	"胶面花纹（新）"
 	{
 		"index"		"1091"
 		"classes"	"weapon_elite;"
 	}
-	"纵横波涛"
+	"纵横波涛（新）"
 	{
 		"index"		"1090"
 		"classes"	"weapon_deagle;"
 	}
-	"铋晶体"
+	"铋晶体（新）"
 	{
 		"index"		"1089"
 		"classes"	"weapon_mag7;"
 	}
-	"瘟疫"
+	"瘟疫（新）"
 	{
 		"index"		"1088"
 		"classes"	"weapon_aug;"
 	}
-	"抽象派1337"
+	"抽象派1337（新）"
 	{
 		"index"		"1087"
 		"classes"	"weapon_ak47;"
 	}
-	"自动化"
+	"自动化（新）"
 	{
 		"index"		"1118"
 		"classes"	"weapon_knife_push;"
 	}
-	"自动化"
+	"自动化（新）"
 	{
 		"index"		"1117"
 		"classes"	"weapon_knife_tactical;"
 	}
-	"自动化"
+	"自动化（新）"
 	{
 		"index"		"1116"
 		"classes"	"weapon_knife_falchion;"
 	}
-	"自动化"
+	"自动化（新）"
 	{
 		"index"		"1115"
 		"classes"	"weapon_knife_butterfly;"
 	}
-	"自动化"
+	"自动化（新）"
 	{
 		"index"		"1114"
 		"classes"	"weapon_knife_survival_bowie;"
 	}
-	"黑色层压板"
+	"黑色层压板（新）"
 	{
 		"index"		"1113"
 		"classes"	"weapon_knife_push;"
 	}
-	"黑色层压板"
+	"黑色层压板（新）"
 	{
 		"index"		"1112"
 		"classes"	"weapon_knife_tactical;"
 	}
-	"黑色层压板"
+	"黑色层压板（新）"
 	{
 		"index"		"1111"
 		"classes"	"weapon_knife_falchion;"
 	}
-	"黑色层压板"
+	"黑色层压板（新）"
 	{
 		"index"		"1110"
 		"classes"	"weapon_knife_butterfly;"
 	}
-	"黑色层压板"
+	"黑色层压板（新）"
 	{
 		"index"		"1109"
 		"classes"	"weapon_knife_survival_bowie;"
 	}
-	"传说"
+	"传说（新）"
 	{
 		"index"		"1108"
 		"classes"	"weapon_knife_push;"
 	}
-	"传说"
+	"传说（新）"
 	{
 		"index"		"1107"
 		"classes"	"weapon_knife_tactical;"
 	}
-	"传说"
+	"传说（新）"
 	{
 		"index"		"1106"
 		"classes"	"weapon_knife_falchion;"
 	}
-	"传说"
+	"传说（新）"
 	{
 		"index"		"1105"
 		"classes"	"weapon_knife_butterfly;"
 	}
-	"传说"
+	"传说（新）"
 	{
 		"index"		"1104"
 		"classes"	"weapon_knife_survival_bowie;"
 	}
-	"线路故障"
+	"线路故障（新）"
 	{
 		"index"		"1066"
 		"classes"	"weapon_famas;"
 	}
-	"更换机油"
+	"更换机油（新）"
 	{
 		"index"		"1086"
 		"classes"	"weapon_elite;"
 	}
-	"机械装置"
+	"机械装置（新）"
 	{
 		"index"		"1085"
 		"classes"	"weapon_ump45;"
 	}
-	"玩命职场"
+	"玩命职场（新）"
 	{
 		"index"		"1084"
 		"classes"	"weapon_sg556;"
 	}
-	"开关箱"
+	"开关箱（新）"
 	{
 		"index"		"1083"
 		"classes"	"weapon_bizon;"
 	}
-	"坠落危险"
+	"坠落危险（新）"
 	{
 		"index"		"1082"
 		"classes"	"weapon_fiveseven;"
 	}
-	"数字架构师"
+	"数字架构师（新）"
 	{
 		"index"		"1081"
 		"classes"	"weapon_p250;"
 	}
-	"基础建设"
+	"基础建设（新）"
 	{
 		"index"		"1080"
 		"classes"	"weapon_negev;"
 	}
-	"Track Tires"
+	"Track Tires（新）"
 	{
 		"index"		"1079"
 		"classes"	"weapon_glock;"
 	}
-	"胎面花纹"
+	"胎面花纹（新）"
 	{
 		"index"		"1078"
 		"classes"	"weapon_xm1014;"
 	}
-	"至幻时刻"
+	"至幻时刻（新）"
 	{
 		"index"		"1077"
 		"classes"	"weapon_nova;"
 	}
-	"幻光构架"
+	"幻光构架（新）"
 	{
 		"index"		"1076"
 		"classes"	"weapon_cz75a;"
 	}
-	"策略"
+	"策略（新）"
 	{
 		"index"		"1075"
 		"classes"	"weapon_mac10;"
 	}
-	"解视图"
+	"解视图（新）"
 	{
 		"index"		"1074"
 		"classes"	"weapon_p90;"
 	}
-	"紧迫危机"
+	"紧迫危机（新）"
 	{
 		"index"		"1073"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"棱彩阶梯"
+	"棱彩阶梯（新）"
 	{
 		"index"		"1072"
 		"classes"	"weapon_mag7;"
 	}
-	"警告！"
+	"警告！（新）"
 	{
 		"index"		"1071"
 		"classes"	"weapon_galilar;"
 	}
-	"绿色层压板"
+	"绿色层压板（新）"
 	{
 		"index"		"1070"
 		"classes"	"weapon_ak47;"
 	}
-	"伽玛多普勒 (Phase 4)"
+	"伽玛多普勒 (Phase 4)（新）"
 	{
 		"index"		"1123"
 		"classes"	"weapon_glock;"
 	}
-	"伽玛多普勒 (Phase 3)"
+	"伽玛多普勒 (Phase 3)（新）"
 	{
 		"index"		"1122"
 		"classes"	"weapon_glock;"
 	}
-	"伽玛多普勒 (Phase 2)"
+	"伽玛多普勒 (Phase 2)（新）"
 	{
 		"index"		"1121"
 		"classes"	"weapon_glock;"
 	}
-	"伽玛多普勒 (Phase 1)"
+	"伽玛多普勒 (Phase 1)（新）"
 	{
 		"index"		"1120"
 		"classes"	"weapon_glock;"
 	}
-	"伽玛多普勒 (Emerald)"
+	"伽玛多普勒 (Emerald)（新）"
 	{
 		"index"		"1119"
 		"classes"	"weapon_glock;"
 	}
-	"凝视之眼"
+	"凝视之眼（新）"
 	{
 		"index"		"1067"
 		"classes"	"weapon_mac10;"
 	}
-	"银装素裹"
+	"银装素裹（新）"
 	{
 		"index"		"1065"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"辛迪加"
+	"辛迪加（新）"
 	{
 		"index"		"1064"
 		"classes"	"weapon_cz75a;"
 	}
-	"合纵"
+	"合纵（新）"
 	{
 		"index"		"1063"
 		"classes"	"weapon_m4a1;"
 	}
-	"秋季方巾"
+	"秋季方巾（新）"
 	{
 		"index"		"1061"
 		"classes"	"weapon_mp5sd;"
 	}
-	"春季方巾"
+	"春季方巾（新）"
 	{
 		"index"		"1060"
 		"classes"	"weapon_ssg08;"
 	}
-	"Fizzy POP"
+	"Fizzy POP（新）"
 	{
 		"index"		"1059"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"POP AWP"
+	"POP AWP（新）"
 	{
 		"index"		"1058"
 		"classes"	"weapon_awp;"
 	}
-	"人造卫星"
+	"人造卫星（新）"
 	{
 		"index"		"1056"
 		"classes"	"weapon_deagle;"
 	}
-	"太空竞赛"
+	"太空竞赛（新）"
 	{
 		"index"		"1055"
 		"classes"	"weapon_hkp2000;"
 	}
-	"熔化"
+	"熔化（新）"
 	{
 		"index"		"1053"
 		"classes"	"weapon_famas;"
@@ -885,162 +885,162 @@
 		"index"		"941"
 		"classes"	"weapon_ak47;"
 	}
-	"幻化绿洲"
+	"幻化绿洲（新）"
 	{
 		"index"		"923"
 		"classes"	"weapon_mp5sd;"
 	}
-	"沙漠之花"
+	"沙漠之花（新）"
 	{
 		"index"		"765"
 		"classes"	"weapon_sg556;"
 	}
-	"沙漠之狐"
+	"沙漠之狐（新）"
 	{
 		"index"		"764"
 		"classes"	"weapon_deagle;"
 	}
-	"安乐蜥"
+	"安乐蜥（新）"
 	{
 		"index"		"829"
 		"classes"	"weapon_bizon;"
 	}
-	"碧绿升藤"
+	"碧绿升藤（新）"
 	{
 		"index"		"828"
 		"classes"	"weapon_p90;"
 	}
-	"雪茄盒"
+	"雪茄盒（新）"
 	{
 		"index"		"827"
 		"classes"	"weapon_m249;"
 	}
-	"赭色大马士革"
+	"赭色大马士革（新）"
 	{
 		"index"		"826"
 		"classes"	"weapon_mac10;"
 	}
-	"天旱"
+	"天旱（新）"
 	{
 		"index"		"825"
 		"classes"	"weapon_p250;"
 	}
-	"浮木"
+	"浮木（新）"
 	{
 		"index"		"824"
 		"classes"	"weapon_elite;"
 	}
-	"夜空沙暴"
+	"夜空沙暴（新）"
 	{
 		"index"		"823"
 		"classes"	"weapon_aug;"
 	}
-	"海军之辉"
+	"海军之辉（新）"
 	{
 		"index"		"822"
 		"classes"	"weapon_mag7;"
 	}
-	"雅藤如嫣"
+	"雅藤如嫣（新）"
 	{
 		"index"		"821"
 		"classes"	"weapon_xm1014;"
 	}
-	"八音盒"
+	"八音盒（新）"
 	{
 		"index"		"820"
 		"classes"	"weapon_mp9;"
 	}
-	"沙漠九头蛇"
+	"沙漠九头蛇（新）"
 	{
 		"index"		"819"
 		"classes"	"weapon_awp;"
 	}
-	"紫色DDPAT"
+	"紫色DDPAT（新）"
 	{
 		"index"		"818"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"致命一击"
+	"致命一击（新）"
 	{
 		"index"		"1052"
 		"classes"	"weapon_ssg08;"
 	}
-	"掠夺者"
+	"掠夺者（新）"
 	{
 		"index"		"935"
 		"classes"	"weapon_mp7;weapon_ssg08;"
 	}
-	"白骨"
+	"白骨（新）"
 	{
 		"index"		"934"
 		"classes"	"weapon_sg556;"
 	}
-	"夜半棕榈"
+	"夜半棕榈（新）"
 	{
 		"index"		"933"
 		"classes"	"weapon_m249;weapon_cz75a;"
 	}
-	"枯藤老树"
+	"枯藤老树（新）"
 	{
 		"index"		"932"
 		"classes"	"weapon_fiveseven;"
 	}
-	"残花败藤"
+	"残花败藤（新）"
 	{
 		"index"		"931"
 		"classes"	"weapon_mp9;"
 	}
-	"碧藤青翠"
+	"碧藤青翠（新）"
 	{
 		"index"		"930"
 		"classes"	"weapon_g3sg1;"
 	}
-	"流沙"
+	"流沙（新）"
 	{
 		"index"		"929"
 		"classes"	"weapon_nova;"
 	}
-	"潜藏者"
+	"潜藏者（新）"
 	{
 		"index"		"928"
 		"classes"	"weapon_p250;"
 	}
-	"朽木"
+	"朽木（新）"
 	{
 		"index"		"927"
 		"classes"	"weapon_aug;"
 	}
-	"红色DDPAT"
+	"红色DDPAT（新）"
 	{
 		"index"		"926"
 		"classes"	"weapon_m4a1;"
 	}
-	"沙漠DDPAT"
+	"沙漠DDPAT（新）"
 	{
 		"index"		"925"
 		"classes"	"weapon_p90;"
 	}
-	"沙漠伪装"
+	"沙漠伪装（新）"
 	{
 		"index"		"924"
 		"classes"	"weapon_revolver;"
 	}
-	"橙红安乐蜥"
+	"橙红安乐蜥（新）"
 	{
 		"index"		"922"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"金色藤蔓"
+	"金色藤蔓（新）"
 	{
 		"index"		"921"
 		"classes"	"weapon_ak47;"
 	}
-	"旱地之花"
+	"旱地之花（新）"
 	{
 		"index"		"880"
 		"classes"	"weapon_sawedoff;"
 	}
-	"渐变之色"
+	"渐变之色（新）"
 	{
 		"index"		"879"
 		"classes"	"weapon_ump45;"
@@ -2575,7 +2575,7 @@
 		"index"		"796"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"安全网"
+	"安全网（TEC-9新皮肤）"
 	{
 		"index"		"795"
 		"classes"	"weapon_ak47;weapon_tec9;"
@@ -4160,7 +4160,7 @@
 		"index"		"251"
 		"classes"	"weapon_awp;"
 	}
-	"逮捕者"
+	"逮捕者（UMP-45新皮肤）"
 	{
 		"index"		"250"
 		"classes"	"weapon_ump45;weapon_sawedoff;weapon_mp7;"
@@ -4170,7 +4170,7 @@
 		"index"		"249"
 		"classes"	"weapon_elite;"
 	}
-	"晶红石英"
+	"晶红石英（NOVA新皮肤）"
 	{
 		"index"		"248"
 		"classes"	"weapon_tec9;weapon_nova;"
@@ -4180,7 +4180,7 @@
 		"index"		"247"
 		"classes"	"weapon_sg556;"
 	}
-	"渐变琥珀"
+	"渐变琥珀（新）"
 	{
 		"index"		"246"
 		"classes"	"weapon_aug;weapon_galilar;weapon_mac10;weapon_sawedoff;weapon_hkp2000;"
@@ -4210,7 +4210,7 @@
 		"index"		"241"
 		"classes"	"weapon_galilar;"
 	}
-	"加州迷彩"
+	"加州迷彩（FAMAS新皮肤）"
 	{
 		"index"		"240"
 		"classes"	"weapon_famas;weapon_xm1014;weapon_negev;"
@@ -4805,7 +4805,7 @@
 		"index"		"71"
 		"classes"	"weapon_hkp2000;"
 	}
-	"碳素纤维"
+	"碳素纤维（SSG-08新皮肤）"
 	{
 		"index"		"70"
 		"classes"	"weapon_ump45;weapon_bizon;weapon_mag7;weapon_scar20;weapon_ssg08;"
@@ -4855,7 +4855,7 @@
 		"index"		"46"
 		"classes"	"weapon_elite;weapon_fiveseven;weapon_aug;weapon_g3sg1;weapon_scar20;"
 	}
-	"表面淬火"
+	"表面淬火（MAC-10）"
 	{
 		"index"		"44"
 		"classes"	"weapon_fiveseven;weapon_ak47;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
@@ -4890,7 +4890,7 @@
 		"index"		"38"
 		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_cord;weapon_knife_canis;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_outdoor;weapon_knife_stiletto;weapon_knife_widowmaker;weapon_knife_skeleton;"
 	}
-	"炽烈之炎"
+	"炽烈之炎（R8新皮肤）"
 	{
 		"index"		"37"
 		"classes"	"weapon_deagle;weapon_ump45;weapon_revolver;"
