更新中文名--BUFF翻译
更新中文名

--- a/addons/sourcemod/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/weapons/weapons_schinese.cfg
@@ -1,86 +1,86 @@
 "Skins"
 {
-	"Spirit Board（新）"
+	"灵应牌（新）"
 	{
 		"index"		"1140"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Poultrygeist（新）"
+	"暗夜活死鸡（新）"
 	{
 		"index"		"1139"
 		"classes"	"weapon_scar20;"
 	}
-	"Lifted Spirits（新）"
+	"升天（新）"
 	{
 		"index"		"1138"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Necro Jr.（新）"
+	"小小噩梦（新）"
 	{
 		"index"		"1137"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Ticket to Hell（新）"
+	"地狱门票（新）"
 	{
 		"index"		"1136"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Zombie Offensive（新）"
+	"行尸攻势（新）"
 	{
 		"index"		"1135"
 		"classes"	"weapon_xm1014;"
 	}
-	"Starlight Protector（新）"
+	"星使（新）"
 	{
 		"index"		"1134"
 		"classes"	"weapon_mp9;"
 	}
-	"Abyssal Apparition（新）"
+	"幽幻深渊（新）"
 	{
 		"index"		"1133"
 		"classes"	"weapon_mp7;"
 	}
-	"Foresight（新）"
+	"先见之明（新）"
 	{
 		"index"		"1132"
 		"classes"	"weapon_mag7;"
 	}
-	"Ensnared（新）"
+	"坐牢（新）"
 	{
 		"index"		"1131"
 		"classes"	"weapon_mac10;"
 	}
-	"Night Terror（新）"
+	"夜无眠（新）"
 	{
 		"index"		"1130"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Dream Glade（新）"
+	"梦之林地（新）"
 	{
 		"index"		"1129"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Scrawl（新）"
+	"涂鸦潦草（新）"
 	{
 		"index"		"1128"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Rapid Eye Movement（新）"
+	"目皆转睛（新）"
 	{
 		"index"		"1127"
 		"classes"	"weapon_famas;"
 	}
-	"Melondrama（新）"
+	"瓜瓜（新）"
 	{
 		"index"		"1126"
 		"classes"	"weapon_elite;"
 	}
-	"Space Cat（新）"
+	"太空猫（新）"
 	{
 		"index"		"1125"
 		"classes"	"weapon_bizon;"
 	}
-	"Nightwish（新）"
+	"夜愿（新）"
 	{
 		"index"		"1141"
 		"classes"	"weapon_ak47;"
